[tool.poetry]
name = "pmhclib"
version = "0.1.0"
description = "Python wrapper for unofficial PMHC MDS portal API"
authors = [
    "David Wales <david.wales@swsphn.com.au>",
    "Jonathan Stucken <jonathan.stucken@swsphn.com.au>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
