[tool.poetry]
name = "pmhclib"
version = "0.2.0"
description = "Python wrapper for unofficial PMHC MDS portal API"
authors = [
    "David Wales <david.wales@swsphn.com.au>",
    "Jonathan Stucken <jonathan.stucken@swsphn.com.au>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
rich = ">=13.7.0"
playwright = ">=1.40.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
myst-parser = ">=2.0.0"
sphinx-autoapi = ">=3.0.0"
sphinx-rtd-theme = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
